parser.output
Terminals which are not used

   FIGURE_PATH
   FIGURE_SPECS
   HEADING
   MATH_STRING
   ENDL
   T_U
   BEGIN_FIGURE
   END_FIGURE
   CAPTION
   COMMA
   LABEL_TAG
   REF_TAG


State 10 conflicts: 14 shift/reduce
State 24 conflicts: 3 shift/reduce
State 39 conflicts: 4 shift/reduce
State 56 conflicts: 3 shift/reduce
State 61 conflicts: 3 shift/reduce
State 79 conflicts: 3 shift/reduce


Grammar

    0 $accept: start $end

    1 start: title date begin_document

    2 title: TITLE STRING END_CURLY
    3      | /* empty */

    4 date: DATE STRING END_CURLY
    5     | /* empty */

    6 begin_document: BEGIN_DOCUMENT content END_DOCUMENT

    7 content: content_element
    8        | content content_element
    9        | /* empty */

   10 content_element: verbatim
   11                | list
   12                | section
   13                | subsection
   14                | subsubsection
   15                | text
   16                | figure
   17                | hrule
   18                | tabular
   19                | href

   20 list: ul
   21     | ol

   22 ul: BEGIN_ITEMIZE items END_ITEMIZE

   23 ol: BEGIN_ENUMERATE items END_ENUMERATE

   24 items: items ITEM text
   25      | ITEM text
   26      | items list
   27      | list

   28 section: SECTION BEGIN_CURLY STRING END_CURLY

   29 subsection: SUBSECTION BEGIN_CURLY STRING END_CURLY

   30 subsubsection: SUBSUBSECTION BEGIN_CURLY STRING END_CURLY

   31 verbatim: START_VERBATIM code END_VERBATIM

   32 code: code CODE
   33     | CODE

   34 bold: T_BF BEGIN_CURLY STRING END_CURLY

   35 italic: T_IT BEGIN_CURLY STRING END_CURLY

   36 figure: INCLUDE_GRAPHICS BEGIN_SQUARE FIG_ARGS END_SQUARE BEGIN_CURLY STRING END_CURLY

   37 text: text STRING
   38     | text bold
   39     | text italic
   40     | text PAR text
   41     | text PAR
   42     | PAR text
   43     | PAR
   44     | bold
   45     | italic
   46     | STRING

   47 tabular: BEGIN_TABULAR BEGIN_CURLY TABLE_ARGS END_CURLY HLINE rows END_TABULAR

   48 rows: rows row
   49     | row

   50 row: cells DSLASH HLINE
   51    | cells DSLASH

   52 cells: cells AMPERSAND cell
   53      | cell

   54 cell: text

   55 href: HREF BEGIN_CURLY STRING END_CURLY BEGIN_CURLY STRING END_CURLY

   56 hrule: HRULE


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING (258) 2 4 28 29 30 34 35 36 37 46 55
CODE (259) 32 33
FIGURE_PATH (260)
FIGURE_SPECS (261)
HEADING (262)
MATH_STRING (263)
FIG_ARGS (264) 36
TABLE_ARGS (265) 47
TITLE (266) 2
DATE (267) 4
START_VERBATIM (268) 31
END_VERBATIM (269) 31
END_CURLY (270) 2 4 28 29 30 34 35 36 47 55
BEGIN_DOCUMENT (271) 6
END_DOCUMENT (272) 6
ITEM (273) 24 25
BEGIN_ITEMIZE (274) 22
END_ITEMIZE (275) 22
BEGIN_ENUMERATE (276) 23
END_ENUMERATE (277) 23
SECTION (278) 28
SUBSECTION (279) 29
SUBSUBSECTION (280) 30
ENDL (281)
T_BF (282) 34
T_IT (283) 35
T_U (284)
BEGIN_TABULAR (285) 47
END_TABULAR (286) 47
HLINE (287) 47 50
AMPERSAND (288) 52
DSLASH (289) 50 51
BEGIN_FIGURE (290)
BEGIN_SQUARE (291) 36
END_FIGURE (292)
END_SQUARE (293) 36
INCLUDE_GRAPHICS (294) 36
CAPTION (295)
COMMA (296)
BEGIN_CURLY (297) 28 29 30 34 35 36 47 55
PAR (298) 40 41 42 43
LABEL_TAG (299)
REF_TAG (300)
HRULE (301) 56
HREF (302) 55


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
start (49)
    on left: 1, on right: 0
title (50)
    on left: 2 3, on right: 1
date (51)
    on left: 4 5, on right: 1
begin_document (52)
    on left: 6, on right: 1
content (53)
    on left: 7 8 9, on right: 6 8
content_element (54)
    on left: 10 11 12 13 14 15 16 17 18 19, on right: 7 8
list (55)
    on left: 20 21, on right: 11 26 27
ul (56)
    on left: 22, on right: 20
ol (57)
    on left: 23, on right: 21
items (58)
    on left: 24 25 26 27, on right: 22 23 24 26
section (59)
    on left: 28, on right: 12
subsection (60)
    on left: 29, on right: 13
subsubsection (61)
    on left: 30, on right: 14
verbatim (62)
    on left: 31, on right: 10
code (63)
    on left: 32 33, on right: 31 32
bold (64)
    on left: 34, on right: 38 44
italic (65)
    on left: 35, on right: 39 45
figure (66)
    on left: 36, on right: 16
text (67)
    on left: 37 38 39 40 41 42 43 44 45 46, on right: 15 24 25 37 38
    39 40 41 42 54
tabular (68)
    on left: 47, on right: 18
rows (69)
    on left: 48 49, on right: 47 48
row (70)
    on left: 50 51, on right: 48 49
cells (71)
    on left: 52 53, on right: 50 51 52
cell (72)
    on left: 54, on right: 52 53
href (73)
    on left: 55, on right: 19
hrule (74)
    on left: 56, on right: 17


state 0

    0 $accept: . start $end

    TITLE  shift, and go to state 1

    $default  reduce using rule 3 (title)

    start  go to state 2
    title  go to state 3


state 1

    2 title: TITLE . STRING END_CURLY

    STRING  shift, and go to state 4


state 2

    0 $accept: start . $end

    $end  shift, and go to state 5


state 3

    1 start: title . date begin_document

    DATE  shift, and go to state 6

    $default  reduce using rule 5 (date)

    date  go to state 7


state 4

    2 title: TITLE STRING . END_CURLY

    END_CURLY  shift, and go to state 8


state 5

    0 $accept: start $end .

    $default  accept


state 6

    4 date: DATE . STRING END_CURLY

    STRING  shift, and go to state 9


state 7

    1 start: title date . begin_document

    BEGIN_DOCUMENT  shift, and go to state 10

    begin_document  go to state 11


state 8

    2 title: TITLE STRING END_CURLY .

    $default  reduce using rule 2 (title)


state 9

    4 date: DATE STRING . END_CURLY

    END_CURLY  shift, and go to state 12


state 10

    6 begin_document: BEGIN_DOCUMENT . content END_DOCUMENT

    STRING            shift, and go to state 13
    START_VERBATIM    shift, and go to state 14
    BEGIN_ITEMIZE     shift, and go to state 15
    BEGIN_ENUMERATE   shift, and go to state 16
    SECTION           shift, and go to state 17
    SUBSECTION        shift, and go to state 18
    SUBSUBSECTION     shift, and go to state 19
    T_BF              shift, and go to state 20
    T_IT              shift, and go to state 21
    BEGIN_TABULAR     shift, and go to state 22
    INCLUDE_GRAPHICS  shift, and go to state 23
    PAR               shift, and go to state 24
    HRULE             shift, and go to state 25
    HREF              shift, and go to state 26

    STRING            [reduce using rule 9 (content)]
    START_VERBATIM    [reduce using rule 9 (content)]
    BEGIN_ITEMIZE     [reduce using rule 9 (content)]
    BEGIN_ENUMERATE   [reduce using rule 9 (content)]
    SECTION           [reduce using rule 9 (content)]
    SUBSECTION        [reduce using rule 9 (content)]
    SUBSUBSECTION     [reduce using rule 9 (content)]
    T_BF              [reduce using rule 9 (content)]
    T_IT              [reduce using rule 9 (content)]
    BEGIN_TABULAR     [reduce using rule 9 (content)]
    INCLUDE_GRAPHICS  [reduce using rule 9 (content)]
    PAR               [reduce using rule 9 (content)]
    HRULE             [reduce using rule 9 (content)]
    HREF              [reduce using rule 9 (content)]
    $default          reduce using rule 9 (content)

    content          go to state 27
    content_element  go to state 28
    list             go to state 29
    ul               go to state 30
    ol               go to state 31
    section          go to state 32
    subsection       go to state 33
    subsubsection    go to state 34
    verbatim         go to state 35
    bold             go to state 36
    italic           go to state 37
    figure           go to state 38
    text             go to state 39
    tabular          go to state 40
    href             go to state 41
    hrule            go to state 42


state 11

    1 start: title date begin_document .

    $default  reduce using rule 1 (start)


state 12

    4 date: DATE STRING END_CURLY .

    $default  reduce using rule 4 (date)


state 13

   46 text: STRING .

    $default  reduce using rule 46 (text)


state 14

   31 verbatim: START_VERBATIM . code END_VERBATIM

    CODE  shift, and go to state 43

    code  go to state 44


state 15

   22 ul: BEGIN_ITEMIZE . items END_ITEMIZE

    ITEM             shift, and go to state 45
    BEGIN_ITEMIZE    shift, and go to state 15
    BEGIN_ENUMERATE  shift, and go to state 16

    list   go to state 46
    ul     go to state 30
    ol     go to state 31
    items  go to state 47


state 16

   23 ol: BEGIN_ENUMERATE . items END_ENUMERATE

    ITEM             shift, and go to state 45
    BEGIN_ITEMIZE    shift, and go to state 15
    BEGIN_ENUMERATE  shift, and go to state 16

    list   go to state 46
    ul     go to state 30
    ol     go to state 31
    items  go to state 48


state 17

   28 section: SECTION . BEGIN_CURLY STRING END_CURLY

    BEGIN_CURLY  shift, and go to state 49


state 18

   29 subsection: SUBSECTION . BEGIN_CURLY STRING END_CURLY

    BEGIN_CURLY  shift, and go to state 50


state 19

   30 subsubsection: SUBSUBSECTION . BEGIN_CURLY STRING END_CURLY

    BEGIN_CURLY  shift, and go to state 51


state 20

   34 bold: T_BF . BEGIN_CURLY STRING END_CURLY

    BEGIN_CURLY  shift, and go to state 52


state 21

   35 italic: T_IT . BEGIN_CURLY STRING END_CURLY

    BEGIN_CURLY  shift, and go to state 53


state 22

   47 tabular: BEGIN_TABULAR . BEGIN_CURLY TABLE_ARGS END_CURLY HLINE rows END_TABULAR

    BEGIN_CURLY  shift, and go to state 54


state 23

   36 figure: INCLUDE_GRAPHICS . BEGIN_SQUARE FIG_ARGS END_SQUARE BEGIN_CURLY STRING END_CURLY

    BEGIN_SQUARE  shift, and go to state 55


state 24

   42 text: PAR . text
   43     | PAR .

    STRING  shift, and go to state 13
    T_BF    shift, and go to state 20
    T_IT    shift, and go to state 21

    STRING    [reduce using rule 43 (text)]
    T_BF      [reduce using rule 43 (text)]
    T_IT      [reduce using rule 43 (text)]
    $default  reduce using rule 43 (text)

    bold    go to state 36
    italic  go to state 37
    text    go to state 56


state 25

   56 hrule: HRULE .

    $default  reduce using rule 56 (hrule)


state 26

   55 href: HREF . BEGIN_CURLY STRING END_CURLY BEGIN_CURLY STRING END_CURLY

    BEGIN_CURLY  shift, and go to state 57


state 27

    6 begin_document: BEGIN_DOCUMENT content . END_DOCUMENT
    8 content: content . content_element

    STRING            shift, and go to state 13
    START_VERBATIM    shift, and go to state 14
    END_DOCUMENT      shift, and go to state 58
    BEGIN_ITEMIZE     shift, and go to state 15
    BEGIN_ENUMERATE   shift, and go to state 16
    SECTION           shift, and go to state 17
    SUBSECTION        shift, and go to state 18
    SUBSUBSECTION     shift, and go to state 19
    T_BF              shift, and go to state 20
    T_IT              shift, and go to state 21
    BEGIN_TABULAR     shift, and go to state 22
    INCLUDE_GRAPHICS  shift, and go to state 23
    PAR               shift, and go to state 24
    HRULE             shift, and go to state 25
    HREF              shift, and go to state 26

    content_element  go to state 59
    list             go to state 29
    ul               go to state 30
    ol               go to state 31
    section          go to state 32
    subsection       go to state 33
    subsubsection    go to state 34
    verbatim         go to state 35
    bold             go to state 36
    italic           go to state 37
    figure           go to state 38
    text             go to state 39
    tabular          go to state 40
    href             go to state 41
    hrule            go to state 42


state 28

    7 content: content_element .

    $default  reduce using rule 7 (content)


state 29

   11 content_element: list .

    $default  reduce using rule 11 (content_element)


state 30

   20 list: ul .

    $default  reduce using rule 20 (list)


state 31

   21 list: ol .

    $default  reduce using rule 21 (list)


state 32

   12 content_element: section .

    $default  reduce using rule 12 (content_element)


state 33

   13 content_element: subsection .

    $default  reduce using rule 13 (content_element)


state 34

   14 content_element: subsubsection .

    $default  reduce using rule 14 (content_element)


state 35

   10 content_element: verbatim .

    $default  reduce using rule 10 (content_element)


state 36

   44 text: bold .

    $default  reduce using rule 44 (text)


state 37

   45 text: italic .

    $default  reduce using rule 45 (text)


state 38

   16 content_element: figure .

    $default  reduce using rule 16 (content_element)


state 39

   15 content_element: text .
   37 text: text . STRING
   38     | text . bold
   39     | text . italic
   40     | text . PAR text
   41     | text . PAR

    STRING  shift, and go to state 60
    T_BF    shift, and go to state 20
    T_IT    shift, and go to state 21
    PAR     shift, and go to state 61

    STRING    [reduce using rule 15 (content_element)]
    T_BF      [reduce using rule 15 (content_element)]
    T_IT      [reduce using rule 15 (content_element)]
    PAR       [reduce using rule 15 (content_element)]
    $default  reduce using rule 15 (content_element)

    bold    go to state 62
    italic  go to state 63


state 40

   18 content_element: tabular .

    $default  reduce using rule 18 (content_element)


state 41

   19 content_element: href .

    $default  reduce using rule 19 (content_element)


state 42

   17 content_element: hrule .

    $default  reduce using rule 17 (content_element)


state 43

   33 code: CODE .

    $default  reduce using rule 33 (code)


state 44

   31 verbatim: START_VERBATIM code . END_VERBATIM
   32 code: code . CODE

    CODE          shift, and go to state 64
    END_VERBATIM  shift, and go to state 65


state 45

   25 items: ITEM . text

    STRING  shift, and go to state 13
    T_BF    shift, and go to state 20
    T_IT    shift, and go to state 21
    PAR     shift, and go to state 24

    bold    go to state 36
    italic  go to state 37
    text    go to state 66


state 46

   27 items: list .

    $default  reduce using rule 27 (items)


state 47

   22 ul: BEGIN_ITEMIZE items . END_ITEMIZE
   24 items: items . ITEM text
   26      | items . list

    ITEM             shift, and go to state 67
    BEGIN_ITEMIZE    shift, and go to state 15
    END_ITEMIZE      shift, and go to state 68
    BEGIN_ENUMERATE  shift, and go to state 16

    list  go to state 69
    ul    go to state 30
    ol    go to state 31


state 48

   23 ol: BEGIN_ENUMERATE items . END_ENUMERATE
   24 items: items . ITEM text
   26      | items . list

    ITEM             shift, and go to state 67
    BEGIN_ITEMIZE    shift, and go to state 15
    BEGIN_ENUMERATE  shift, and go to state 16
    END_ENUMERATE    shift, and go to state 70

    list  go to state 69
    ul    go to state 30
    ol    go to state 31


state 49

   28 section: SECTION BEGIN_CURLY . STRING END_CURLY

    STRING  shift, and go to state 71


state 50

   29 subsection: SUBSECTION BEGIN_CURLY . STRING END_CURLY

    STRING  shift, and go to state 72


state 51

   30 subsubsection: SUBSUBSECTION BEGIN_CURLY . STRING END_CURLY

    STRING  shift, and go to state 73


state 52

   34 bold: T_BF BEGIN_CURLY . STRING END_CURLY

    STRING  shift, and go to state 74


state 53

   35 italic: T_IT BEGIN_CURLY . STRING END_CURLY

    STRING  shift, and go to state 75


state 54

   47 tabular: BEGIN_TABULAR BEGIN_CURLY . TABLE_ARGS END_CURLY HLINE rows END_TABULAR

    TABLE_ARGS  shift, and go to state 76


state 55

   36 figure: INCLUDE_GRAPHICS BEGIN_SQUARE . FIG_ARGS END_SQUARE BEGIN_CURLY STRING END_CURLY

    FIG_ARGS  shift, and go to state 77


state 56

   37 text: text . STRING
   38     | text . bold
   39     | text . italic
   40     | text . PAR text
   41     | text . PAR
   42     | PAR text .

    STRING  shift, and go to state 60
    T_BF    shift, and go to state 20
    T_IT    shift, and go to state 21

    STRING    [reduce using rule 42 (text)]
    T_BF      [reduce using rule 42 (text)]
    T_IT      [reduce using rule 42 (text)]
    $default  reduce using rule 42 (text)

    bold    go to state 62
    italic  go to state 63


state 57

   55 href: HREF BEGIN_CURLY . STRING END_CURLY BEGIN_CURLY STRING END_CURLY

    STRING  shift, and go to state 78


state 58

    6 begin_document: BEGIN_DOCUMENT content END_DOCUMENT .

    $default  reduce using rule 6 (begin_document)


state 59

    8 content: content content_element .

    $default  reduce using rule 8 (content)


state 60

   37 text: text STRING .

    $default  reduce using rule 37 (text)


state 61

   40 text: text PAR . text
   41     | text PAR .

    STRING  shift, and go to state 13
    T_BF    shift, and go to state 20
    T_IT    shift, and go to state 21

    STRING    [reduce using rule 41 (text)]
    T_BF      [reduce using rule 41 (text)]
    T_IT      [reduce using rule 41 (text)]
    $default  reduce using rule 41 (text)

    bold    go to state 36
    italic  go to state 37
    text    go to state 79


state 62

   38 text: text bold .

    $default  reduce using rule 38 (text)


state 63

   39 text: text italic .

    $default  reduce using rule 39 (text)


state 64

   32 code: code CODE .

    $default  reduce using rule 32 (code)


state 65

   31 verbatim: START_VERBATIM code END_VERBATIM .

    $default  reduce using rule 31 (verbatim)


state 66

   25 items: ITEM text .
   37 text: text . STRING
   38     | text . bold
   39     | text . italic
   40     | text . PAR text
   41     | text . PAR

    STRING  shift, and go to state 60
    T_BF    shift, and go to state 20
    T_IT    shift, and go to state 21
    PAR     shift, and go to state 61

    $default  reduce using rule 25 (items)

    bold    go to state 62
    italic  go to state 63


state 67

   24 items: items ITEM . text

    STRING  shift, and go to state 13
    T_BF    shift, and go to state 20
    T_IT    shift, and go to state 21
    PAR     shift, and go to state 24

    bold    go to state 36
    italic  go to state 37
    text    go to state 80


state 68

   22 ul: BEGIN_ITEMIZE items END_ITEMIZE .

    $default  reduce using rule 22 (ul)


state 69

   26 items: items list .

    $default  reduce using rule 26 (items)


state 70

   23 ol: BEGIN_ENUMERATE items END_ENUMERATE .

    $default  reduce using rule 23 (ol)


state 71

   28 section: SECTION BEGIN_CURLY STRING . END_CURLY

    END_CURLY  shift, and go to state 81


state 72

   29 subsection: SUBSECTION BEGIN_CURLY STRING . END_CURLY

    END_CURLY  shift, and go to state 82


state 73

   30 subsubsection: SUBSUBSECTION BEGIN_CURLY STRING . END_CURLY

    END_CURLY  shift, and go to state 83


state 74

   34 bold: T_BF BEGIN_CURLY STRING . END_CURLY

    END_CURLY  shift, and go to state 84


state 75

   35 italic: T_IT BEGIN_CURLY STRING . END_CURLY

    END_CURLY  shift, and go to state 85


state 76

   47 tabular: BEGIN_TABULAR BEGIN_CURLY TABLE_ARGS . END_CURLY HLINE rows END_TABULAR

    END_CURLY  shift, and go to state 86


state 77

   36 figure: INCLUDE_GRAPHICS BEGIN_SQUARE FIG_ARGS . END_SQUARE BEGIN_CURLY STRING END_CURLY

    END_SQUARE  shift, and go to state 87


state 78

   55 href: HREF BEGIN_CURLY STRING . END_CURLY BEGIN_CURLY STRING END_CURLY

    END_CURLY  shift, and go to state 88


state 79

   37 text: text . STRING
   38     | text . bold
   39     | text . italic
   40     | text . PAR text
   40     | text PAR text .
   41     | text . PAR

    STRING  shift, and go to state 60
    T_BF    shift, and go to state 20
    T_IT    shift, and go to state 21

    STRING    [reduce using rule 40 (text)]
    T_BF      [reduce using rule 40 (text)]
    T_IT      [reduce using rule 40 (text)]
    $default  reduce using rule 40 (text)

    bold    go to state 62
    italic  go to state 63


state 80

   24 items: items ITEM text .
   37 text: text . STRING
   38     | text . bold
   39     | text . italic
   40     | text . PAR text
   41     | text . PAR

    STRING  shift, and go to state 60
    T_BF    shift, and go to state 20
    T_IT    shift, and go to state 21
    PAR     shift, and go to state 61

    $default  reduce using rule 24 (items)

    bold    go to state 62
    italic  go to state 63


state 81

   28 section: SECTION BEGIN_CURLY STRING END_CURLY .

    $default  reduce using rule 28 (section)


state 82

   29 subsection: SUBSECTION BEGIN_CURLY STRING END_CURLY .

    $default  reduce using rule 29 (subsection)


state 83

   30 subsubsection: SUBSUBSECTION BEGIN_CURLY STRING END_CURLY .

    $default  reduce using rule 30 (subsubsection)


state 84

   34 bold: T_BF BEGIN_CURLY STRING END_CURLY .

    $default  reduce using rule 34 (bold)


state 85

   35 italic: T_IT BEGIN_CURLY STRING END_CURLY .

    $default  reduce using rule 35 (italic)


state 86

   47 tabular: BEGIN_TABULAR BEGIN_CURLY TABLE_ARGS END_CURLY . HLINE rows END_TABULAR

    HLINE  shift, and go to state 89


state 87

   36 figure: INCLUDE_GRAPHICS BEGIN_SQUARE FIG_ARGS END_SQUARE . BEGIN_CURLY STRING END_CURLY

    BEGIN_CURLY  shift, and go to state 90


state 88

   55 href: HREF BEGIN_CURLY STRING END_CURLY . BEGIN_CURLY STRING END_CURLY

    BEGIN_CURLY  shift, and go to state 91


state 89

   47 tabular: BEGIN_TABULAR BEGIN_CURLY TABLE_ARGS END_CURLY HLINE . rows END_TABULAR

    STRING  shift, and go to state 13
    T_BF    shift, and go to state 20
    T_IT    shift, and go to state 21
    PAR     shift, and go to state 24

    bold    go to state 36
    italic  go to state 37
    text    go to state 92
    rows    go to state 93
    row     go to state 94
    cells   go to state 95
    cell    go to state 96


state 90

   36 figure: INCLUDE_GRAPHICS BEGIN_SQUARE FIG_ARGS END_SQUARE BEGIN_CURLY . STRING END_CURLY

    STRING  shift, and go to state 97


state 91

   55 href: HREF BEGIN_CURLY STRING END_CURLY BEGIN_CURLY . STRING END_CURLY

    STRING  shift, and go to state 98


state 92

   37 text: text . STRING
   38     | text . bold
   39     | text . italic
   40     | text . PAR text
   41     | text . PAR
   54 cell: text .

    STRING  shift, and go to state 60
    T_BF    shift, and go to state 20
    T_IT    shift, and go to state 21
    PAR     shift, and go to state 61

    $default  reduce using rule 54 (cell)

    bold    go to state 62
    italic  go to state 63


state 93

   47 tabular: BEGIN_TABULAR BEGIN_CURLY TABLE_ARGS END_CURLY HLINE rows . END_TABULAR
   48 rows: rows . row

    STRING       shift, and go to state 13
    T_BF         shift, and go to state 20
    T_IT         shift, and go to state 21
    END_TABULAR  shift, and go to state 99
    PAR          shift, and go to state 24

    bold    go to state 36
    italic  go to state 37
    text    go to state 92
    row     go to state 100
    cells   go to state 95
    cell    go to state 96


state 94

   49 rows: row .

    $default  reduce using rule 49 (rows)


state 95

   50 row: cells . DSLASH HLINE
   51    | cells . DSLASH
   52 cells: cells . AMPERSAND cell

    AMPERSAND  shift, and go to state 101
    DSLASH     shift, and go to state 102


state 96

   53 cells: cell .

    $default  reduce using rule 53 (cells)


state 97

   36 figure: INCLUDE_GRAPHICS BEGIN_SQUARE FIG_ARGS END_SQUARE BEGIN_CURLY STRING . END_CURLY

    END_CURLY  shift, and go to state 103


state 98

   55 href: HREF BEGIN_CURLY STRING END_CURLY BEGIN_CURLY STRING . END_CURLY

    END_CURLY  shift, and go to state 104


state 99
